# fetchIt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
fetchit/: __init__.py  cache.py  cli.py  crawler.py  extractor.py  markdown_converter.py
fetchit_core/: bindings.cpp  sitemap_parser.cpp  url_manager.cpp
